about fix clamp gap

--- a/src/style/sass/components/_dropdown.scss
+++ b/src/style/sass/components/_dropdown.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 3rem;
+    gap: clamp(1.5rem, 3vw, 3rem);
 }
     
 
